# aumos-edge-runtime

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FIRE_LINE.md  README.md
.github/workflows/: ci.yml
crates/aumos-edge-core/: Cargo.toml
crates/aumos-edge-core/src/: audit.rs  budget.rs  config.rs  consent.rs  governance.rs  lib.rs  storage.rs  trust.rs  types.rs
crates/aumos-edge-node/: Cargo.toml  package.json
crates/aumos-edge-node/src/: lib.rs
crates/aumos-edge-python/: Cargo.toml
crates/aumos-edge-python/python/aumos_edge/: __init__.py
crates/aumos-edge-python/src/: lib.rs
crates/aumos-edge-sync/: Cargo.toml
crates/aumos-edge-sync/src/: conflict.rs  conflict_resolution.rs  lib.rs  queue.rs  sync.rs  transport.rs
docs/: architecture.md  deployment.md  mobile-sdk.md  offline-governance.md  offline-mode.md  physical-ai.md  sync-protocol.md
examples/python/: edge_example.py
examples/rust/: basic_edge.rs
examples/typescript/: edge_example.ts
scripts/: fire-line-audit.sh
