# SPDX-License-Identifier: BSL-1.1
# Copyright (c) 2026 MuVeraAI Corporation

[workspace]
resolver = "2"
members = [
    "crates/aumos-edge-core",
    "crates/aumos-edge-sync",
    "crates/aumos-edge-python",
    "crates/aumos-edge-node",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.75"
authors      = ["MuVeraAI Corporation <opensource@muveraai.com>"]
license      = "BSL-1.1"
repository   = "https://github.com/muveraai/aumos-edge-runtime"
homepage     = "https://aumos.ai"

[workspace.dependencies]
# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"

# Crypto
sha2        = "0.10"
hex         = "0.4"

# Time
chrono      = { version = "0.4", features = ["serde"] }

# UUID
uuid        = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror   = "1"

# HTTP (sync transport)
ureq        = { version = "2", features = ["json"] }

# Logging
log         = "0.4"
env_logger  = "0.11"

# Intra-workspace
aumos-edge-core = { path = "crates/aumos-edge-core" }
aumos-edge-sync = { path = "crates/aumos-edge-sync" }

[profile.release]
opt-level = 3
lto       = "thin"
strip     = true

[profile.dev]
opt-level = 0
debug     = true
