# SPDX-License-Identifier: BSL-1.1
# Copyright (c) 2026 MuVeraAI Corporation

[package]
name        = "aumos-edge-node"
description = "NAPI-RS Node.js/TypeScript binding stubs for aumos-edge-runtime"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable the `nodejs` feature to build the native Node.js addon.
# Users must have `@napi-rs/cli` installed: npm install -g @napi-rs/cli
nodejs  = ["dep:napi", "dep:napi-derive"]

[dependencies]
aumos-edge-core = { workspace = true }
aumos-edge-sync = { workspace = true }
serde_json      = { workspace = true }
napi            = { version = "2", features = ["napi4"], optional = true }
napi-derive     = { version = "2", optional = true }
